--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.example.peptalkgenerator'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.peptalkgenerator"
         minSdk 24
-        targetSdk 34
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -20,25 +20,25 @@ android {
             useSupportLibrary true
         }
     }
-    
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = '17'
     }
     buildFeatures {
-        compose true
+        compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion = '1.4.7'
     }
     packagingOptions {
         resources {
@@ -56,10 +56,13 @@ dependencies {
     implementation('androidx.compose.ui:ui-graphics')
     implementation('androidx.compose.ui:ui-tooling-preview')
     implementation('androidx.compose.material3:material3')
+    implementation('androidx.compose.runtime:runtime-livedata:1.5.0')
     implementation('androidx.core:core-ktx:1.10.1')
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
     implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
     implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.6.1')
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+
 
     //Room
     implementation("androidx.room:room-runtime:2.5.2")
@@ -69,11 +72,5 @@ dependencies {
     //Testing
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
-    testImplementation("junit:junit:4.13.2")
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1")
-
-    //debug
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
 
