--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,12 @@ android {
 }
 
 dependencies {
-
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation('androidx.activity:activity-compose:1.7.2')
     implementation('androidx.compose.ui:ui')
     implementation('androidx.compose.ui:ui-graphics')
+    implementation("androidx.compose.ui:ui-tooling")
     implementation('androidx.compose.ui:ui-tooling-preview')
     implementation('androidx.compose.material3:material3')
     implementation('androidx.compose.runtime:runtime-livedata:1.5.0')
@@ -62,6 +62,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
     implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.6.1')
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 
 
     //Room
