--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.devtools.ksp") version "1.8.21-1.0.11"
+    id("com.google.devtools.ksp") version "1.9.10-1.0.13"
 }
 
 android {
     namespace 'com.example.peptalkgenerator'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.peptalkgenerator"
-        minSdk 24
-        targetSdk 33
+        minSdk 26
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -38,7 +38,7 @@ android {
         compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = '1.4.7'
+        kotlinCompilerExtensionVersion = '1.5.3'
     }
     packagingOptions {
         resources {
@@ -48,30 +48,30 @@ android {
 }
 
 dependencies {
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation('androidx.activity:activity-compose:1.7.2')
-    implementation('androidx.compose.ui:ui')
-    implementation('androidx.compose.ui:ui-graphics')
+    implementation platform("androidx.compose:compose-bom:2022.10.00")
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
+    implementation("androidx.activity:activity-compose:1.8.1")
+    implementation("androidx.compose.ui:ui")
+    implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.ui:ui-tooling")
-    implementation('androidx.compose.ui:ui-tooling-preview')
-    implementation('androidx.compose.material3:material3')
-    implementation('androidx.compose.runtime:runtime-livedata:1.5.0')
-    implementation('androidx.core:core-ktx:1.10.1')
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
-    implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.6.1')
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
-    implementation "androidx.navigation:navigation-compose:2.6.0"
-
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation("androidx.compose.material3:material3")
+    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
+    implementation("androidx.navigation:navigation-compose:2.7.5")
 
     //Room
-    implementation("androidx.room:room-runtime:2.5.2")
-    ksp("androidx.room:room-compiler:2.5.2")
-    implementation("androidx.room:room-ktx:2.5.2")
+    def room_version = "2.6.1"
+    implementation("androidx.room:room-runtime:$room_version")
+    implementation 'androidx.wear.compose:compose-material:1.2.1'
+    implementation("androidx.room:room-ktx:$room_version")
+    ksp("androidx.room:room-compiler:$room_version")
+
 
     //Testing
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
 }
-
