--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <application
         android:name=".PepTalkApplication"
         android:allowBackup="true"
@@ -13,10 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PepTalkGenerator"
         tools:targetApi="33">
+        <receiver android:name=".alarm.AlarmReceiver" />
         <activity
             android:name="com.example.peptalkgenerator.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PepTalkGenerator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
