--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     //Work manager
     implementation("androidx.work:work-runtime-ktx:2.9.0")
 
+    //Accompanist, for perms
+    implementation "com.google.accompanist:accompanist-permissions:0.32.0"
+
     //Room
     def room_version = "2.6.1"
     implementation("androidx.room:room-runtime:$room_version")
@@ -76,6 +79,8 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
     ksp("androidx.room:room-compiler:$room_version")
 
+    //datastore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 
     //Testing
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
