--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id("com.google.devtools.ksp") version "1.9.10-1.0.13"
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -10,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.peptalkgenerator"
-        minSdk 26
+        minSdk 34
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -50,18 +52,32 @@ android {
 dependencies {
     implementation platform("androidx.compose:compose-bom:2022.10.00")
     implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
-    implementation("androidx.activity:activity-compose:1.8.1")
+    implementation("androidx.activity:activity-compose:1.8.2")
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.ui:ui-tooling")
     implementation("androidx.compose.ui:ui-tooling-preview")
     implementation("androidx.compose.material3:material3")
     implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
-    implementation("androidx.navigation:navigation-compose:2.7.5")
+    implementation("androidx.navigation:navigation-compose:2.7.6")
+
+    //Lifecycle
+    def lifecycle_version = "2.6.1"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:lifecycle_version")
+
+    //Accompanist, for perms
+    implementation "com.google.accompanist:accompanist-permissions:0.32.0"
+
+    //datastore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+    //Hilt
+    implementation "com.google.dagger:hilt-android:2.46"
+    kapt "com.google.dagger:hilt-compiler:2.46"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
 
     //Room
     def room_version = "2.6.1"
@@ -70,8 +86,12 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
     ksp("androidx.room:room-compiler:$room_version")
 
-
     //Testing
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
