--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,17 +50,17 @@ android {
 dependencies {
     implementation platform("androidx.compose:compose-bom:2022.10.00")
     implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
-    implementation("androidx.activity:activity-compose:1.8.1")
+    implementation("androidx.activity:activity-compose:1.8.2")
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.ui:ui-tooling")
     implementation("androidx.compose.ui:ui-tooling-preview")
     implementation("androidx.compose.material3:material3")
-    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
-    implementation("androidx.navigation:navigation-compose:2.7.5")
+    implementation("androidx.compose.runtime:runtime-livedata:1.6.0")
+    implementation("androidx.navigation:navigation-compose:2.7.6")
 
     // Lifecycle
-    def lifecycle_version = "2.6.2"
+    def lifecycle_version = "2.7.0"
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version")
     implementation("androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
@@ -75,9 +75,10 @@ dependencies {
     //Room
     def room_version = "2.6.1"
     implementation("androidx.room:room-runtime:$room_version")
-    implementation 'androidx.wear.compose:compose-material:1.2.1'
     implementation("androidx.room:room-ktx:$room_version")
     ksp("androidx.room:room-compiler:$room_version")
+    //implementation("androidx.wear.compose:compose-material:1.3.0")
+
 
     //datastore
     implementation("androidx.datastore:datastore-preferences:1.0.0")
